clusters/production/media/radarr/radarr-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: radarr
        securityContext:
          allowPrivilegeEscalation: false
        image: linuxserver/radarr:6.4.4 # {"$imagepolicy": "flux-system:radarr"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7878
        startupProbe:
          tcpSocket:
            port: 7878
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 7878
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 7878
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: radarr-downloads
          mountPath: /downloads
        - name: radarr-videos
          mountPath: /videos
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: pvc-radarr-config
      - name: radarr-downloads
        persistentVolumeClaim:
          claimName: pvc-media-downloads
      - name: radarr-videos
        persistentVolumeClaim:
          claimName: pvc-media-videos
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: radarr
    port: 7878
    targetPort: 7878
  type: ClusterIP
