clusters/production/media/radarr/radarr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - radarr.rees.ca
  rules:
  - backendRefs:
    - name: radarr
      port: 7878
