clusters/production/media/radarr/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "radarr.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: radarr
            port:
              number: 7878
